force-app/main/default/objects/EA_Settings__c/EA_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EA Settings</label>
</CustomObject>