force-app/main/default/objects/EA_Settings__c/fields/EA_Business_Fields_2__c.field-meta.xml
<CustomField>
    <fullName>EA_Business_Fields_2__c</fullName>
    <label>EA Business Fields 2</label>
    <type>TextArea</type>
</CustomField>