force-app/main/default/objects/EA_Settings__c/fields/EA_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>EA_Contact_Fields__c</fullName>
    <description>A list of fields separated by commas that are imported from EAutomate into Salesforce</description>
    <label>EA Contact Fields</label>
    <type>TextArea</type>
</CustomField>