force-app/main/default/objects/EA_Settings__c/fields/EAutomate_Admin__c.field-meta.xml
<CustomField>
    <fullName>EAutomate_Admin__c</fullName>
    <label>EAutomate Admin</label>
    <type>Email</type>
</CustomField>