force-app/main/default/objects/EA_Settings__c/fields/Enable_EQMakesModels__c.field-meta.xml
<CustomField>
    <fullName>Enable_EQMakesModels__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls the EqMakesModels trigger</description>
    <inlineHelpText>Controls the EqMakesModels trigger</inlineHelpText>
    <label>Enable EQMakesModels</label>
    <type>Checkbox</type>
</CustomField>