force-app/main/default/objects/EA_Settings__c/fields/Enable_Lease_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_Lease_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the Lease Email</description>
    <inlineHelpText>Check here to enable the Lease Email feature.</inlineHelpText>
    <label>Enable Lease Email</label>
    <type>Checkbox</type>
</CustomField>