force-app/main/default/objects/EA_Settings__c/fields/Enable_Mark_Latest_Meter_Reading_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Mark_Latest_Meter_Reading_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If enabled, marks the latest Meter Reading for a particular Meter Type for an Equipment as the Latest.</inlineHelpText>
    <label>Enable Mark Latest Meter Reading Trigger</label>
    <type>Checkbox</type>
</CustomField>