force-app/main/default/objects/EA_Settings__c/fields/Lease_Email__c.field-meta.xml
<CustomField>
    <fullName>Lease_Email__c</fullName>
    <description>Enter the email address to send the Lease buyout requests.</description>
    <inlineHelpText>Enter the email address to send the Lease buyout requests.</inlineHelpText>
    <label>Lease Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>